# Dactyl

./: .gitignore  Dactyl.Project.code-workspace  README.md
Source/: CMakeLists.txt
Source/Dactyl.Application/: CMakeLists.txt  Dactyl.Application.Main.cpp
Source/Dactyl.Application/Include/: Dactyl.Utils.h  ver.h.in
Source/Dactyl.Application/Include/Contexts/: Dactyl.ContextLocator.h  Dactyl.GlobalContext.h  Dactyl.IContext.h  Dactyl.NullContext.h
Source/Dactyl.Application/Include/Parsers/: Dactyl.ChunkParser.h  Dactyl.FEMChunk.h  Dactyl.FEMLine.h  Dactyl.FileParser.h  Dactyl.KChunk.h  Dactyl.KChunkParser.h  Dactyl.KLine.h  Dactyl.KResult.h  Dactyl.ParserResult.h
Source/Dactyl.Application/Resources/Meshes/: comsol_plate.mphtxt  task_mesh_coarse.k  task_mesh_extrafine.k  task_mesh_fine.k  task_mesh_homo.k  task_mesh_homo2.k  task_mesh_kirsch.k  task_mesh_test.k  task_mesh_test1.k  task_mesh_test2.k  task_mesh_test3.k
Source/Dactyl.Application/Source/: Dactyl.Utils.cpp  main.cpp
Source/Dactyl.Application/Source/Contexts/: Dactyl.ContextLocator.cpp  Dactyl.GlobalContext.cpp
Source/Dactyl.Application/Source/Parsers/: Dactyl.ChunkParser.cpp  Dactyl.FileParser.cpp  Dactyl.KChunkParser.cpp
Source/Dactyl.Math/: CMakeLists.txt
Source/Dactyl.Math/Include/: Dactyl.Math.h
Source/Dactyl.Math/Internal/Include/: Calc.h  Dactyl.Calc.h
Source/Dactyl.Math/Internal/Source/: Calc.cpp  Dactyl.Calc.cpp
Source/Dactyl.Math/Source/: Dactyl.Math.cpp
Source/Dactyl.Model/: CMakeLists.txt
Source/Dactyl.Model/Include/: Dactyl.EntityBuilder.h  Dactyl.FEModel.h  Dactyl.IModel.h  Dactyl.KData.h  Dactyl.Model.h  Dactyl.ModelAliases.h  Dactyl.ModelLocator.h  Dactyl.NullModel.h  Dactyl.Result.h
Source/Dactyl.Model/Include/Dofs/: Dactyl.IDof.h
Source/Dactyl.Model/Include/Elements/: Dactyl.IElement.h  Dactyl.IElementCreator.h  Dactyl.LinearTriangularElement.h
Source/Dactyl.Model/Include/Materials/: Dactyl.IMaterial.h  Dactyl.IMaterialCreator.h  Dactyl.IsotropicMaterial.h
Source/Dactyl.Model/Include/Nodes/: Dactyl.INode.h  Dactyl.INodeCreator.h  Dactyl.Node.h
Source/Dactyl.Model/Include/Properties/: Dactyl.IProperty.h  Dactyl.IPropertyCreator.h  Dactyl.ShellProperty.h
Source/Dactyl.Model/Include/Sets/: Dactyl.ElementSet.h  Dactyl.MaterialSet.h  Dactyl.NodeSet.h  Dactyl.PropertySet.h
Source/Dactyl.Model/Source/: Dactyl.EntityBuilder.cpp  Dactyl.FEModel.cpp  Dactyl.Model.cpp  Dactyl.ModelLocator.cpp
Source/Dactyl.Model/Source/Elements/: Dactyl.IElementCreator.cpp  Dactyl.LinearTriangularElement.cpp
Source/Dactyl.Model/Source/Materials/: Dactyl.IMaterialCreator.cpp  Dactyl.IsotropicMaterial.cpp
Source/Dactyl.Model/Source/Nodes/: Dactyl.INodeCreator.cpp  Dactyl.Node.cpp
Source/Dactyl.Model/Source/Properties/: Dactyl.IPropertyCreator.cpp  Dactyl.ShellProperty.cpp
Task/: README.md
